# sierpinski

./: pyproject.toml
sierpinski/: main.py
tests/: test_sierpinski.py
