[tool.poetry]
name = "sierpinski"
version = "0.1.0"
description = ""
authors = ["Rob Fulwell <rob.fulwell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
